# Malimail

./: build.gradle  gradlew  settings.gradle
.github/workflows/: Open.yml  Vortek.yml  build.yml  build.yml.bak  fix-java.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/dxwrapper/: dxvk.conf
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/gladiorenderer/include/: gladio.h
app/src/main/cpp/midihandler/: CMakeLists.txt
app/src/main/cpp/vortekrenderer/include/: vortek.h
app/src/main/cpp/winlator/: CMakeLists.txt
app/src/main/java/com/winlator/: ContainerDetailFragment.java  ContainerFileManagerFragment.java  ContainersFragment.java  ControlsEditorActivity.java  ExternalControllerBindingsActivity.java  MainActivity.java  ShortcutsFragment.java  XServerDisplayActivity.java
app/src/main/java/com/winlator/core/: AppUtils.java  EnvVars.java  FileUtils.java  LocaleHelper.java
app/src/main/java/com/winlator/widget/: LogView.java  SeekBar.java
app/src/main/java/com/winlator/winhandler/: TaskManagerDialog.java
app/src/main/java/com/winlator/xenvironment/: RootFSInstaller.java
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
gladio/: CMakeLists.txt
installable_components/dxvk/: index.txt
vortek/: CMakeLists.txt  build.sh  vortek_icd.aarch64.json
vortek/include/: vortek.h  winlator.h
